# kernel

./: CMakeLists.txt  LICENSE  NOTICE  README  affinity.vcxproj  mvstore.vcxproj
include/: affinity.h  afysock.h  afysync.h  afyutils.h  ifacever.h  mvstore.h  rc.h  startup.h  storeio.h  units.h
kernel.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  affinity.proto  affinityimpl.cpp  affinityimpl.h  blob.cpp  blob.h  buffer.cpp  buffer.h  builtin.cpp  classifier.cpp  classifier.h  commitpins.cpp  crypt.cpp  crypt.h  cursor.cpp  cursor.h  dataevent.cpp  dataevent.h  deletepins.cpp  dlalloc.cpp  dlalloc.h  ecc.cpp  ecc.h  errors.cpp  eval.cpp  event.cpp  event.h  expr.cpp  expr.h  fio.cpp  fio.h  fiolinux.cpp  fiolinux.h  fioosx.cpp  fioosx.h  fiowin.cpp  fiowin.h  fsm.cpp  fsm.h  fsmgr.cpp  (+88 more)
